--- a/ZPG-Project/ZPG-Project/ZPG-Project.vcxproj
+++ b/ZPG-Project/ZPG-Project/ZPG-Project.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="DrawableObject.cpp" />
     <ClCompile Include="DynamicRotate.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Model.h" />
@@ -144,6 +145,7 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
+    <ClCompile Include="Subject.cpp" />
     <ClCompile Include="Transformation.cpp" />
     <ClCompile Include="Translate.cpp" />
   </ItemGroup>
@@ -154,6 +156,7 @@
     <ClInclude Include="Controller.h" />
     <ClInclude Include="DrawableObject.h" />
     <ClInclude Include="DynamicRotate.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Models\bushes.h" />
     <ClInclude Include="Models\gift.h" />
     <ClInclude Include="Models\plain.h" />
@@ -167,6 +170,7 @@
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderProgram.h" />
+    <ClInclude Include="Subject.h" />
     <ClInclude Include="Transformation.h" />
     <ClInclude Include="Translate.h" />
   </ItemGroup>
