--- a/ZPG-Project/ZPG-Project/ZPG-Project.vcxproj
+++ b/ZPG-Project/ZPG-Project/ZPG-Project.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..\..\Libraries\glew-2.1.0\include;..\..\Libraries\glm-1.0.1-light;..\..\Libraries\glfw-3.4.bin.WIN64\glfw-3.4.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\Libraries\tinyobjloader-1.0.6;..\..\Libraries\glew-2.1.0\include;..\..\Libraries\glm-1.0.1-light;..\..\Libraries\glfw-3.4.bin.WIN64\glfw-3.4.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -130,17 +130,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Libraries\tinyobjloader-1.0.6\tiny_obj_loader.cc" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="ATransform.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Controller.cpp" />
+    <ClCompile Include="DirectionLight.cpp" />
     <ClCompile Include="DrawableObject.cpp" />
     <ClCompile Include="DynamicRotate.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Model.h" />
+    <ClCompile Include="PointLight.cpp" />
     <ClCompile Include="RandomTranslate.cpp" />
+    <ClCompile Include="ReflectorLight.cpp" />
     <ClCompile Include="Rotate.cpp" />
     <ClCompile Include="Scale.cpp" />
     <ClCompile Include="Scene.cpp" />
@@ -151,10 +155,12 @@
     <ClCompile Include="Translate.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Libraries\tinyobjloader-1.0.6\tiny_obj_loader.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="ATransform.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Controller.h" />
+    <ClInclude Include="DirectionLight.h" />
     <ClInclude Include="DrawableObject.h" />
     <ClInclude Include="DynamicRotate.h" />
     <ClInclude Include="Light.h" />
@@ -166,7 +172,9 @@
     <ClInclude Include="Models\suzi_smooth.h" />
     <ClInclude Include="Models\tree.h" />
     <ClInclude Include="Observer.h" />
+    <ClInclude Include="PointLight.h" />
     <ClInclude Include="RandomTranslate.h" />
+    <ClInclude Include="ReflectorLight.h" />
     <ClInclude Include="Rotate.h" />
     <ClInclude Include="Scale.h" />
     <ClInclude Include="Scene.h" />
